fixed a visibility issue in video view with very litle metadata
svn path=/plumi.skin/trunk/; revision=110972

--- a/plumi/skin/browser/stylesheets/plumi.css
+++ b/plumi/skin/browser/stylesheets/plumi.css
@@ -366,7 +366,7 @@ cursor:pointer;
 }
 
 #full-description {
-  clear:left;
+  clear:both;
 }
 
 #video-core {
